[tool.poetry]
name = "usageai-tech-interview"
version = "0.1.0"
description = "kylejb's code challenge submission"
authors = ["kylejb"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
streamlit = "^0.79.0"
pandas = "^1.2.3"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
